--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"__locale": "c",
 		"philosophers.h": "c",
-		"utils.C": "cpp"
+		"utils.C": "cpp",
+		"*.s": "cpp"
 	}
 }
